[package]
name = "elbey"
version = "0.6.1"
edition = "2021"
license-file = "LICENSE"
description = "A desktop app launcher for Linux"
repository = "https://github.com/kgilmer/elbey"
readme = "README.md"

[dependencies]
anyhow = "1.0"
argh = "0.1"
bincode = "1.3"
dirs = "6"
freedesktop-desktop-entry = "0.8"
freedesktop-icons = "0.3.1"
iced = { version = "0.14", features = ["image", "svg"] }
iced_layershell = "0.14.2"
image = "0.25"
lazy_static = "1.5"
serde = { version = "1.0", features = ["serde_derive"] }
shell-words = "^1"
sled = "0.34"

[dev-dependencies]
iced_runtime = "0.14"
