[package]
name = "elbey"
version = "0.6.2"
edition = "2021"
license-file = "LICENSE"
description = "A desktop app launcher for Linux"
repository = "https://github.com/kgilmer/elbey"
readme = "README.md"

[dependencies]
anyhow = "1.0"
argh = "0.1"
elbey-cache = { path = "elbey-cache" }
freedesktop-desktop-entry = "0.8"
iced = { version = "0.14", features = ["image", "svg"] }
iced_layershell = "0.14.2"
lazy_static = "1.5"
shell-words = "^1"

[dev-dependencies]
iced_runtime = "0.14"

[workspace]
members = [".", "elbey-cache"]
