[package]
name = "elbey-cache"
version = "0.8.0"
edition = "2021"
license-file = "../LICENSE"
description = "Cache library for the Elbey app launcher"
repository = "https://github.com/kgilmer/elbey"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
dirs = "6"
freedesktop-desktop-entry = "0.8"
freedesktop-icons = "0.3.1"
iced = { version = "0.14", features = ["image", "svg"] }
image = "0.25"
serde = { version = "1.0", features = ["serde_derive"] }
sled = "0.34"
